# HW_12_Web

./: main.py  pyproject.toml
migration/versions/: 4ac21a05f417_add_new_columbs.py  54bbfccde0e2_init.py
src/conf/: config.py
src/database/: db.py  fu_db.py
src/entity/: models.py
src/repository/: users.py
src/routes/: todos.py
src/schemas/: todo.py  user.py
src/services/: auth.py
